--- a/dynamic.html
+++ b/dynamic.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY DYNAMIC PAGE</title>
+	<title> WELCOME TO MY DYNAMIC PAGE</title>
+	<style>
+		*{
+			margin: 0;
+			padding: 0;
+		}
+		body{
+			margin-left: 520px;
+			margin-top: 300px;
+			font-size: 30px;
+			font-family: Arial, Helvetica, sans-serif;
+			
+		}
+		button{
+			margin-left: 140px;
+			margin-top: 10px;
+			font-size: 50px;
+			padding: 10px;
+			border-radius: 10px;
+			background-color: black;
+			color:white;
+			opacity: 0.5;
+			outline: none;
+		}
+		button:hover{
+			background-color: red;
+			font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+			cursor: pointer;
+
+		}
+	</style>
 
 	<script type="text/javascript">
 		function addParagraphText() 
